Add google verification meta

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@ layout: compress
     {% include head.html %}
     {% include head/custom.html %}
     {% seo %}
+    <meta name="google-site-verification" content="IVb_hndGZ4qEUgDgtPkyPcPMgiaDlQ_x7kUY4aWse54" />
   </head>
 
   <body>
